--- a/pom.xml
+++ b/pom.xml
@@ -89,24 +89,25 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-security</artifactId>
-      </dependency><!-- 
-      <dependency>
-        <groupId>com.h2database</groupId>
-        <artifactId>h2</artifactId> 
-        <scope>runtime</scope>
-      </dependency> -->
+      </dependency>
       <dependency>
         <groupId>postgresql</groupId>
         <artifactId>postgresql</artifactId>
         <version>9.1-901-1.jdbc4</version>
-      </dependency>      
-      <!-- <dependency>
-          <groupId>org.hibernate</groupId>
-          <artifactId>hibernate-core</artifactId>
-      </dependency>  -->
+      </dependency>  
       <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-ehcache</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.webjars</groupId>
+        <artifactId>bootstrap</artifactId>
+        <version>3.3.4</version>
+      </dependency>
+      <dependency>
+        <groupId>org.webjars</groupId>
+        <artifactId>jquery</artifactId>
+        <version>2.1.4</version>
       </dependency>
    </dependencies>
    
