--- a/pom.xml
+++ b/pom.xml
@@ -85,11 +85,11 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-thymeleaf</artifactId>
-      </dependency>
+      </dependency><!-- 
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-security</artifactId>
-      </dependency>
+      </dependency> -->
       <dependency>
         <groupId>postgresql</groupId>
         <artifactId>postgresql</artifactId>
