--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-
-spring.datasource.driverClassName = org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL9Dialect
 
 spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.hibernate.show-sql=true
+
+# spring.datasource.driverClassName = org.postgresql.jdbc.Driver
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/hibernateanno
 
@@ -19,3 +19,14 @@ spring.datasource.initialize=true
 spring.datasource.continue-on-error=true
 
 server.port = 8081
+
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+
+
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=12
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1200000
